--- a/para-paint/package.json
+++ b/para-paint/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-query": "^1.26.0",
+    "webpack": "^5.76.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -18,7 +20,11 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "node-sass": "^8.0.0",
+    "sass-loader": "^13.2.1",
+    "typescript": "^5.0.2",
+    "vue-drawing-canvas": "^1.0.14"
   },
   "eslintConfig": {
     "root": true,
