--- a/para-paint/package.json
+++ b/para-paint/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-query": "^1.26.0",
+    "vue-router": "^4.1.6",
     "webpack": "^5.76.3"
   },
   "devDependencies": {
