--- a/para-paint/package.json
+++ b/para-paint/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
@@ -15,6 +16,7 @@
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
     "vue": "^3.2.13",
+    "vue-axios": "^3.5.2",
     "vue-query": "^1.26.0",
     "vue-router": "^4.1.6",
     "webpack": "^5.76.3"
